Replace apollo with provenance

--- a/Resources/_locales/en/messages.json
+++ b/Resources/_locales/en/messages.json
@@ -1,10 +1,10 @@
 {
     "extension_name": {
-        "message": "Open in Apollo",
+        "message": "Open in Provenance",
         "description": "The display name for the extension."
     },
     "extension_description": {
-        "message": "Opens Reddit links in Apollo. Can be set to automatic or manual.",
+        "message": "Opens Reddit links in Provenance. Can be set to automatic or manual.",
         "description": "Description of what the extension does."
     }
 }
